--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -2,9 +2,27 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  ::-webkit-scrollbar {
+    width: 5px;
+    height: 7px;
+    background-color: #131d3f;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    border-radius: 20px;
+    background-color: #66769b;
+  }
+
+  min-width: 400px;
+  overflow: auto;
+}
+
 @font-face {
   font-family: overpass;
   src: url('/src/assets/fonts/Overpass.woff2') format('woff2');
+  font-display: swap;
+  font-style: normal;
 }
 
 h1 {
@@ -14,6 +32,12 @@ h1 {
 @layer components {
   .linknav:hover::after {
     transform: scale(1, 1);
+  }
+
+  .activeEfect:active {
+    transform: scale(0.95);
+    transition: transform 0.2s;
+    cursor: pointer;
   }
 
   .linknav::after {
@@ -29,17 +53,10 @@ h1 {
     transition: transform 0.2s ease;
   }
 
-  .linknav:active {
-    transform: scale(0.95);
-    transition: transform 0.2s;
-  }
-
-  .grid2columsn {
+  .gridColumns {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     gap: 2em;
-    margin: 1em;
-    margin-top: 4em;
     place-content: center;
   }
 }
