--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -23,6 +23,7 @@ html {
   src: url('/src/assets/fonts/Overpass.woff2') format('woff2');
   font-display: swap;
   font-style: normal;
+  font-weight: 400;
 }
 
 h1 {
@@ -55,8 +56,7 @@ h1 {
 
   .gridColumns {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(min(100%, 350px), 1fr));
     gap: 2em;
-    place-content: center;
   }
 }
