--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -31,6 +31,9 @@ h1 {
 }
 
 @layer components {
+  .linknav {
+    position: relative;
+  }
   .linknav:hover::after {
     transform: scale(1, 1);
   }
@@ -58,5 +61,9 @@ h1 {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(min(100%, 350px), 1fr));
     gap: 2em;
+  }
+
+  .bgTexture {
+    background-image: url('/src/assets/images/bgText.png');
   }
 }
