--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -8,6 +8,8 @@ html {
   overflow: auto;
 }
 
+.steps .step:after { color: white; }
+
 @font-face {
   font-family: overpass;
   src: url('/src/assets/fonts/Overpass.woff2') format('woff2');
